fix: fix z-indexes

--- a/src/components/Search/SearchBar.module.scss
+++ b/src/components/Search/SearchBar.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 40px;
-    z-index: 1800;
+    z-index: 1298;
     .input {
         width: 100%;
         height: 40px;
